--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dat.gui": "^0.7.7",
     "gsap": "^3.6.0",
+    "imagesloaded": "^4.1.4",
     "three": "^0.126.1"
   },
   "devDependencies": {
